Testers covertura (#41)
* Se mejora la covertura de RolControllerTest

* Se mejora la covertura de UsuarioControllerTest

* Se crean los tester para Swagger y UserAssembler

* Se mejora cobertura de test de DireccionEnvioController

* Se Mejora la cobertura de UsuarioServiceTest + fixes